added login and sign up features
